T-piece, S-Piece, Z-Piece rotation changed. Hold Window and Next Window edited to support the changes.

--- a/TODO.txt
+++ b/TODO.txt
@@ -17,19 +17,19 @@ TO DO
 	POLISH ROTATION (WALL KICKS) - DONE
 	POLISH ROTATION (FLOOR KICKS) - 
 	LAST MINUTE TICK - 
-	MAIN MENU SCREEN - SELECT BACKGROUND - 
+	MAIN MENU SCREEN - SELECT BACKGROUND - DONE
 	GAME OVER ANIMATION
-	REDONE TETROMINOS BLOCKS COORDINATES - 
-	HIGHSCORE
-	MENU SYSTEM
+	REDONE TETROMINOS BLOCKS COORDINATES - DONE
+	HIGHSCORE - DONE
+	MENU SYSTEM - DONE
 	CREDITS
-	SOUND
-	MUSIC
+	SOUND - DONE
+	MUSIC - DONE
 	CUSTOM CONTROLS
 	JOYSTICK INPUT
 	MULTIPLAYER
 	BATTLE MODE
 	IMPROVE GAMEPLAY/GAME FEEL
 	IMPROVE PRESENTATION
-	IMPROVE BLOCKS
-	EXTEND NEXT WINDOW to 3 pieces in queue
+	IMPROVE BLOCKS - DONE
+	EXTEND NEXT WINDOW to 3 pieces in queue - DONE
